<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <include layout="@layout/activity_base" />

    <EditText
        android:id="@+id/editUsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUsernameText"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPasswordText"
        android:layout_centerHorizontal="true"
        android:text="Login" />

</RelativeLayout>